--- a/mystyle.css
+++ b/mystyle.css
@@ -4,6 +4,22 @@ body{
     h1{
         font-family: Helvetica, Sans-serif;
         font-weight: Bold;
-        font-size: 20px
+        font-size: 20px;
+        color: #ffffff;
+    }
+    h2{
+        font-family: Helvetica, Sans-serif;
+        font-weight: Bold;
+        font-size: 17px;
+        color: #ffffff;
+    }
+    p{
+        font-family: Helvetica, Sans-serif;
+        font-weight: normal;
+        font-size: 12px;
+        color: #ffffff;
+    }
+    audio{
+        color: #303030;
     }
 }
