--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,11 @@
 
 body{
     background-color: #000000;
+.header{
+       margin: auto;
+       width: 80%;
+       padding: 10px;
+}
     h1{
         font-family: Helvetica, Sans-serif;
         font-weight: Bold;
