--- a/mystyle.css
+++ b/mystyle.css
@@ -6,7 +6,7 @@ body{
        width: 80%;
        padding: 10px;
     }
-.content{
+.b{
        margin: auto;
        width: 80%;
        padding: 10px;
