--- a/mystyle.css
+++ b/mystyle.css
@@ -57,6 +57,7 @@ footer{
     width: 100%;
     padding: 20px;
     background-color: #ffffff;
+    text-decoration: none;
     font-family: Helvetica, Sans-serif;
     font-weight: Bold;
     font-size: 20px;
